agregando aos.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/slider.css">
     <!-- <link rel="stylesheet" href="css/debug.css"> -->
 </head>
@@ -111,10 +112,10 @@
 </div>
 <article class="QS">
    
-    <h3 class="titulo">Quiénes Somos</h3>
-    <p class="texto"><b>Healthic </b><sub>®</sub> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austríacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan a nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
-    <a href="nosotros.html" class="boton btnobscuro" >Más información</a>
-    <figure class="foto">
+    <h3 class="titulo" data-aos="fade-down" data-aos-offset="100" data-aos-duration="800">Quiénes Somos</h3>
+    <p class="texto" data-aos="fade-right" data-aos-offset="150" data-aos-duration="800"><b>Healthic </b><sub>®</sub> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austríacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan a nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
+    <a href="nosotros.html" class="boton btnobscuro" data-aos="fade-right" data-aos-offset="200" data-aos-duration="800">Más información</a>
+    <figure data-aos="fade-left" data-aos-offset="250" data-aos-duration="800" class="foto">
         <img src="img/logo.png" class="fotoQS">
     </figure>
    
@@ -122,12 +123,12 @@
 <path  transform="translate(-.148 -1437.3)" d="m0.525 1437.3c3.9 127.68 108.52 230.31 237.21 230.31h-237.58l0.377-230.31h-0.377"/>
 </svg>
 </article>
-<article class="SERV">
+<article data-aos="fade-up" data-aos-duration="1000" class="SERV">
    
-    <h3 class="titulo">Esterilización externa</h3>
-    <p class="texto">Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México.</p>
-    <a href="esterilizacion.html" class="btnclaro boton">Mas Información</a>
-    <figure class="foto">
+    <h3 class="titulo" data-aos="fade-right" data-aos-offset="100" data-aos-duration="800">Esterilización externa</h3>
+    <p class="texto" data-aos="fade-right" data-aos-offset="150" data-aos-duration="800">Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México.</p>
+    <a href="esterilizacion.html" class="btnclaro boton" data-aos="fade-right" data-aos-offset="200" data-aos-duration="800">Mas Información</a>
+    <figure class="foto" data-aos="fade-left" data-aos-offset="250" data-aos-duration="800">
         <div id="carouselQS" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselQS" data-slide-to="0" class="active"></li>
@@ -161,12 +162,12 @@
     </figure>   
 </article>
 
-<article class="SERV2">
+<article  class="SERV2">
    
-    <h3 class="titulo">Bio-desinfección</h3>
-    <p class="texto">Es un servicio automatizado para desinfectar y descontaminar cualquier espacio, mediante el uso de vapor de peróxido de hidrógeno. Este proceso de desinfección ha demostrado la inactivación de patógenos altamente resistentes, como COVID-19. Ha sido ampliamente utilizado en el sector salud, alimenticio, corporativo y doméstico.</p>
-    <a href="biodesinfeccion.html" class="btnclaro boton">Mas Información</a>
-    <figure class="foto">
+    <h3 class="titulo" data-aos="fade-left" data-aos-offset="100" data-aos-duration="800">Bio-desinfección</h3>
+    <p class="texto" data-aos="fade-left" data-aos-offset="150" data-aos-duration="800">Es un servicio automatizado para desinfectar y descontaminar cualquier espacio, mediante el uso de vapor de peróxido de hidrógeno. Este proceso de desinfección ha demostrado la inactivación de patógenos altamente resistentes, como COVID-19. Ha sido ampliamente utilizado en el sector salud, alimenticio, corporativo y doméstico.</p>
+    <a href="biodesinfeccion.html" class="btnclaro boton" data-aos="fade-left" data-aos-offset="200" data-aos-duration="800">Mas Información</a>
+    <figure class="foto" data-aos="fade-right" data-aos-offset="250" data-aos-duration="1000">
         <div id="carouselBD" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselBD" data-slide-to="0" class="active"></li>
@@ -504,5 +505,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
