--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </div>
 <article class="QS">
    
-    <h3 class="titulo" data-aos="fade-down" data-aos-offset="100" data-aos-duration="800">Quiénes Somos</h3>
+    <h3 class="titulo" data-aos="fade-down" data-aos-duration="500">Quiénes Somos</h3>
     <p class="texto" data-aos="fade-right" data-aos-offset="150" data-aos-duration="800"><b>Healthic </b><sub>®</sub> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austríacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan a nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
     <a href="nosotros.html" class="boton btnobscuro" data-aos="fade-right" data-aos-offset="200" data-aos-duration="800">Más información</a>
     <figure data-aos="fade-left" data-aos-offset="250" data-aos-duration="800" class="foto">
@@ -123,7 +123,7 @@
 <path  transform="translate(-.148 -1437.3)" d="m0.525 1437.3c3.9 127.68 108.52 230.31 237.21 230.31h-237.58l0.377-230.31h-0.377"/>
 </svg>
 </article>
-<article data-aos="fade-up" data-aos-duration="1000" class="SERV">
+<article class="SERV">
    
     <h3 class="titulo" data-aos="fade-right" data-aos-offset="100" data-aos-duration="800">Esterilización externa</h3>
     <p class="texto" data-aos="fade-right" data-aos-offset="150" data-aos-duration="800">Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México.</p>
@@ -161,7 +161,6 @@
 </div>
     </figure>   
 </article>
-
 <article  class="SERV2">
    
     <h3 class="titulo" data-aos="fade-left" data-aos-offset="100" data-aos-duration="800">Bio-desinfección</h3>
