poniendo animaciones a todas las paginas

--- a/esterilizacion.html
+++ b/esterilizacion.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/slider.css">
 <!--     <link rel="stylesheet" href="css/debug.css"> -->
 </head>
@@ -99,20 +100,20 @@
    </header>
    
    <article class="QS-Azul">
-       <h3>
+       <h3 data-aos="fade-up" data-aos-offset="100" data-aos-duration="600">
         Problemática
        </h3>
-       <p>
+       <p data-aos="fade-left" data-aos-offset="100" data-aos-duration="600" data-aos-delay="50">
            Según la OMS, las infecciones asociadas a los servicios de salud, son el evento adverso más frecuente a nivel mundial.<br> Los servicios de esterilización en las unidades hospitalarias en México presentan problemas como:
        </p>
        <ul>
-           <li>La creciente demanda quirúrgica empuja el proceso de esterilización hacia prácticas incorrectas para evitar retrasos, doctores insatisfechos, etc.<br><br></li>
-           <li>La creciente complejidad de las cirugías y de los instrumentos que requieren de un proceso específico de esterilización para cada uno de ellos.<br><br></li>
-           <li>La falta de administración del activo de instrumental genera inconsistencias con la programación quirúrgica y unos ciclos de renovación más cortos.<br><br></li>
-           <li>Fuerte inversión en espacio hospitalario de alta productividad (bloque quirúrgico) y en equipamiento específico de esterilización.<br><br></li>
-           <li>Alta rotación del personal, escasa capacitación y ausencia de certificación específica de los procesos de esterilización.<br><br></li>
-           <li>Desactualización frente a los últimos estándares y tecnologías.<br><br></li>
-           <li>Difícil integración entre certificación, capacitación, servicio técnico y consumibles, debido a la complejidad de la estructura hospitalaria.</li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="600" data-aos-delay="50">La creciente demanda quirúrgica empuja el proceso de esterilización hacia prácticas incorrectas para evitar retrasos, doctores insatisfechos, etc.<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="600">La creciente complejidad de las cirugías y de los instrumentos que requieren de un proceso específico de esterilización para cada uno de ellos.<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="600">La falta de administración del activo de instrumental genera inconsistencias con la programación quirúrgica y unos ciclos de renovación más cortos.<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="600">Fuerte inversión en espacio hospitalario de alta productividad (bloque quirúrgico) y en equipamiento específico de esterilización.<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="600">Alta rotación del personal, escasa capacitación y ausencia de certificación específica de los procesos de esterilización.<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="600">Desactualización frente a los últimos estándares y tecnologías.<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="600">Difícil integración entre certificación, capacitación, servicio técnico y consumibles, debido a la complejidad de la estructura hospitalaria.</li>
        </ul>
             <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgIZQ">
             <path  transform="translate(-.148 -1437.3)" d="m0.525 1437.3c3.9 127.68 108.52 230.31 237.21 230.31h-237.58l0.377-230.31h-0.377"/>
@@ -120,8 +121,8 @@
    </article>
    
    <article class="comoResuelve">
-       <h3 class="tituloSolucion">¿Cómo se resuelve el problema hoy?</h3>
-       <p>
+       <h3 class="tituloSolucion" data-aos="fade-down" data-aos-offset="100" data-aos-duration="800">¿Cómo se resuelve el problema hoy?</h3>
+       <p data-aos="fade-left" data-aos-offset="100" data-aos-duration="800">
         Más que esterilizadores y CEYEs, los hospitales requieren de instrumental funcional, estéril y a tiempo. Para solucionar este problema HEALTHIC ha desarrollado un servicio de esterilización tercerizada y certificada.<br><br>
  
         Los servicios que ofrecemos  se realizan en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México.<br><br>
@@ -130,7 +131,7 @@
         </p>
         
         <section class="certificadoFases">
-          <div class="servCERT">
+          <div class="servCERT" data-aos="fade-up-right" data-aos-offset="100" data-aos-duration="800" data-aos-delay="150">
            <img src="img/certificado01.png" class="imgCERT">
            <p>
             Lavado, termodesinfección, empaquetado, inspección y esterilización del instrumental propiedad del cliente.<br>
@@ -139,22 +140,22 @@
             </small>
            </p>
         </div>
-        <div class="servCERT">
+        <div class="servCERT" data-aos="fade-up" data-aos-offset="100" data-aos-duration="800" data-aos-delay="200">
            <img src="img/certificado02.png" class="imgCERT">
            <p>
             Logística de recolección y entrega punto a punto.
            </p>
         </div>
-        <div class="servCERT">
+        <div class="servCERT" data-aos="fade-up-left" data-aos-offset="100" data-aos-duration="800" data-aos-delay="250">
            <img src="img/certificado03.png" class="imgCERT">
            <p>
             Renta de instrumental estéril bajo demanda (Instruments as a Service - IaaS).
            </p>
         </div>  
         </section>
-        <h4>Ofrecemos 3 modelos de gestión de la esterilización</h4>
+        <h4 data-aos="fade-right" data-aos-offset="100" data-aos-duration="800">Ofrecemos 3 modelos de gestión de la esterilización</h4>
         <section class="ModeloG">
-          <div class="gestMod">
+          <div class="gestMod" data-aos="fade-up-right" data-aos-offset="100" data-aos-duration="800"  data-aos-delay="150">
            <h5>A) Servicio externo Deslocalización</h5>
            <p>
             0% de las instituciones de Salud
@@ -164,7 +165,7 @@
                La institución de Salud realiza la inversion en un equipamiento que instala dentro de su edificio, y opera de manera propia.Este es un modelo para fabricantes de dispositivos médicos y hospitales.
            </p>
         </div>
-        <div class="gestMod">
+        <div class="gestMod" data-aos="fade-up" data-aos-offset="100" data-aos-duration="800"  data-aos-delay="200">
            <h5>B) Operación tercerizada Servicio in-house</h5>
            <p>
             1% de las instituciones de Salud
@@ -174,7 +175,7 @@
                La institución de Salud realiza la inversion en un equipamiento que instala dentro de su edificio, y opera de manera propia.Este es un modelo para fabricantes de dispositivos médicos y hospitales.
            </p>
         </div>
-        <div class="gestMod">
+        <div class="gestMod" data-aos="fade-up-left" data-aos-offset="100" data-aos-duration="800"  data-aos-delay="250">
            <h5>C) Tradicional/Proyecto</h5>
            <p>
             99% de las instituciones de Salud
@@ -187,14 +188,14 @@
         </section>
    </article>
    <article class="beneficios">
-       <h3>Beneficios</h3>
+       <h3 data-aos="fade-down" data-aos-offset="100" data-aos-duration="800">Beneficios</h3>
        <ul>
-           <li>Instrumentos a solicitud (administración + servicio + sustitución).<br><br></li>
-           <li>Enfoque OPEX - pagas según necesidad (variabilización de costos).<br><br></li>
-           <li>Transparencia del proceso mediante la trazabilidad.<br><br></li>
-           <li>Tecnología siempre operativa y mantenida por un ingeniero en plantilla propia de Healthic.<br><br></li>
-           <li>Personal capacitado y certificado dedicado.<br><br></li>
-           <li>Proceso certificado (ISO 13485) en cumplimiento con los últimos estándares.</li>
+           <li data-aos="fade-left" data-aos-offset="100" data-aos-duration="800" data-aos-delay="50">Instrumentos a solicitud (administración + servicio + sustitución).<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="800" data-aos-delay="100">Enfoque OPEX - pagas según necesidad (variabilización de costos).<br><br></li>
+           <li data-aos="fade-left" data-aos-offset="100" data-aos-duration="800" data-aos-delay="150">Transparencia del proceso mediante la trazabilidad.<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="800" data-aos-delay="200">Tecnología siempre operativa y mantenida por un ingeniero en plantilla propia de Healthic.<br><br></li>
+           <li data-aos="fade-left" data-aos-offset="100" data-aos-duration="800" data-aos-delay="250">Personal capacitado y certificado dedicado.<br><br></li>
+           <li data-aos="fade-right" data-aos-offset="100" data-aos-duration="800" data-aos-delay="300">Proceso certificado (ISO 13485) en cumplimiento con los últimos estándares.</li>
        </ul>
    </article>
     <img src="img/logo02.png" class="imgfooter">
@@ -245,5 +246,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
