--- a/nosotros.html
+++ b/nosotros.html
@@ -124,26 +124,26 @@
        <h3 data-aos="fade-down" data-aos-offset="50" data-aos-duration="400">
         Nosotros
        </h3>
-       <p data-aos="fade-left" data-aos-offset="100" data-aos-duration="800">
+       <p data-aos="fade-left" data-aos-offset="100" data-aos-duration="800" data-aos-delay="50">
            Healthic ® es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica, en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.
        </p>
-       <h3 data-aos="fade-down" data-aos-offset="100" data-aos-duration="800">
+       <h3 data-aos="fade-down" data-aos-offset="100" data-aos-duration="800" data-aos-delay="150">
         Propósito
        </h3>
-       <p data-aos="fade-right" data-aos-offset="100" data-aos-duration="800">
+       <p data-aos="fade-right" data-aos-offset="100" data-aos-duration="800" data-aos-delay="50">
             Conocemos el valor de la vida, por ellos tenemos la convicción de que debemos llevar bienestar a cualquier lugar donde lleguemos. Interactuamos armónicamente en sistemas a través del equilibrio y la ética. Confianza es lo que los clientes depositan en nuestras manos, mientras que nosotros respondemos con certezas, que se traduce en procesos seguros y calidad excepcional.
         
        </p>
-       <h3 data-aos="fade-right" data-aos-offset="100" data-aos-duration="800">
+       <h3 data-aos="fade-right" data-aos-offset="100" data-aos-duration="800" data-aos-delay="50">
         Misión
        </h3>
-       <p data-aos="fade-left" data-aos-offset="100" data-aos-duration="800">
+       <p data-aos="fade-left" data-aos-offset="100" data-aos-duration="800" data-aos-delay="50">
            Satisfacer las necesidades del sector salud en reprocesamiento hospitalario y esterilización industrial, a través de la construcción y consolidación de un modelo de gestión de centrales destinadas a estos segmentos donde la alta calidad, la tecnología, el equipo humano y la solución a los problemas estratégicos, que colaboran con la generación de valor a nuestros clientes en dichos sectores, nos posicionan como referentes absolutos de la innovación y esterilización de excelencia en latinoamérica.
        </p>
-       <h3 data-aos="fade-left" data-aos-offset="100" data-aos-duration="800">
+       <h3 data-aos="fade-left" data-aos-offset="100" data-aos-duration="800" data-aos-delay="50">
         Visión
        </h3>
-       <p data-aos="fade-right" data-aos-offset="100" data-aos-duration="800">
+       <p data-aos="fade-right" data-aos-offset="100" data-aos-duration="800" data-aos-delay="50">
            Perseguir la innovación y hacerlo con una mentalidad disruptiva que maximice la seguridad en los procedimientos médicos, a través de un servicio de esterilización y desinfección que impacte positivamente en la vida de millones de personas. Nuestra visión está puesta en el hoy y en el mundo que le legare mos a las generaciones venideras.
        </p>
             <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgIZQ">
@@ -154,7 +154,7 @@
    <article class="Historia">
       <div>
        <h3 data-aos="fade-down" data-aos-offset="50" data-aos-duration="600">Historia</h3>
-       <p data-aos="fade-right" data-aos-offset="150" data-aos-duration="1000">
+       <p data-aos="fade-right" data-aos-offset="150" data-aos-duration="1000" data-aos-delay="150">
        El origen de Healthic es global, pues diversos viajes de observación hechos a Alemania, viajes de observación hechos a Alemania, Austria y Suiza, y años de experiencia de sus fundadores viviendo los retos del sistema de salud en Latinoamérica, han sido piedra angular.
         Las diferencias que los fundadores encontraron entre ambos mundos inspiraron la creación de una compañía que toma el estado del arte de los sistemas de control de infecciones más avanzados de la tierra y la adaptación de dicha tecnología a las condiciones locales desde el punto de vista técnico y de modelo de negocio.<br><br>
 
@@ -164,7 +164,7 @@ Después de 10 años de observación de que la disponibilidad de la tecnología 
 Fue en diciembre de 2017 cuando Healthic se puso en marcha en la mente de su fundador y en marzo de 2020 comenzó la operación de la primera central de esterilización de Healthic, la MS1.
    </p>
       </div>
-       <figure class="sliderHistoria" data-aos="fade-left" data-aos-offset="100" data-aos-duration="600">
+       <figure class="sliderHistoria" data-aos="fade-left" data-aos-offset="200" data-aos-duration="1300" data-aos-delay="300">
         <div id="carouselQS" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselQS" data-slide-to="0" class="active"></li>
